add the create tab

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <!-- Nav -->
 	<nav id="nav">
     <a href="#about" class="icon fa-info active"><span>About</span></a>
-		<a href="#polls" class="icon fa-check-square"><span>Polls</span></a>
+    <a href="#join" class="icon fa-check-square"><span>Join</span></a>
+    <a href="#create" class="icon fa-plus"><span>Create</span></a>
 		<a href="#user" class="icon fa-user"><span>User</span></a>
 	</nav>
 
@@ -12,17 +13,25 @@
       <article id="about" class="panel">
         <header>
           <h1>Poll's On!</h1>
+          <p><strong>/pɔʊlzɒn/</strong></p>
           <p>Simple, interactive, fast polls managment.</p>
         </header>
-        <p>bla bla</p>
+        <p>Bla bla</p>
       </article>
 
-		<!-- Polls -->
-			<article id="polls" class="panel">
-				<header>
-					<h2>Polls</h2>
-				</header>
-			</article>
+    <!-- Join a Poll -->
+      <article id="join" class="panel">
+        <header>
+          <h2>Polls</h2>
+        </header>
+      </article>
+
+    <!-- Create a Poll -->
+      <article id="create" class="panel">
+        <header>
+          <h2>Polls</h2>
+        </header>
+      </article>
 
 		<!-- User -->
 			<article id="user" class="panel">
