test about component working

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,12 +11,7 @@
 
     <!-- About -->
       <article id="about" class="panel">
-        <header>
-          <h1>Poll's On!</h1>
-          <p><strong>/pɔʊlzɒn/</strong></p>
-          <p>Simple, interactive, fast polls managment.</p>
-        </header>
-        <p>Bla bla</p>
+        <app-about></app-about>
       </article>
 
     <!-- Join a Poll -->
