user-login component mockup

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,21 @@
-<header>
-  <h1>Poll's On!</h1>
-  <p><strong>/pɔʊlzɒn/</strong></p>
-  <p>Simple, interactive, fast polls managment.</p>
-</header>
-<p>Bla bla</p>
+<div class="row">
+  <div class="8u 12u$(mobile)">
+    <header>
+      <h1>Poll's On!</h1>
+      <p><strong>/pɔʊlzɒn/</strong></p>
+      <p>Simple, interactive, fast polls managment.</p>
+    </header>
+
+    <p>Wanting to ask some questions to your audience ?<br>
+    <a href="{{BASE_PATH}}#user">Log in</a> and start <a href="#create">creating your own polls</a> in just a few minutes !</p>
+
+    <p>Wanting to respond to a given poll ?<br>
+    You don't need to be logged in, just <a href="#join">join it</a> !</p>
+  </div>
+
+  <div class="4u$ 12u$(mobile)">
+    <a href="#" class="image fit">
+      <img src="http://placehold.it/500x700" alt="" />
+    </a>
+  </div>
+</div>
