move user-login control in user component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,8 +26,7 @@
 
 		<!-- User -->
 			<article id="user" class="panel">
-        <app-user *ngIf="authService.authentificated()"></app-user>
-        <app-user-login *ngIf="!authService.authentificated()"></app-user-login>
+        <app-user></app-user>
 			</article>
 
 	</div>
