--- a/src/app/join/join.component.html
+++ b/src/app/join/join.component.html
@@ -1,3 +1,3 @@
-<header>
-  <h2>Polls</h2>
-</header>
+<section>
+  <app-input-number count="4" (onFullfilled)="doJoin($event)"></app-input-number>
+</section>
