issue #2 resolved by adding the jumplink class to links

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -7,10 +7,10 @@
     </header>
 
     <p>Wanting to ask some questions to your audience ?<br>
-    <a href="{{BASE_PATH}}#user">Log in</a> and start <a href="#create">creating your own polls</a> in just a few minutes !</p>
+    <a class="jumplink" href="#user">Log in</a> and start <a class="jumplink" href="#create">creating your own polls</a> in just a few minutes !</p>
 
     <p>Wanting to respond to a given poll ?<br>
-    You don't need to be logged in, just <a href="#join">join it</a> !</p>
+    You don't need to be logged in, just <a class="jumplink" href="#join">join it</a> !</p>
   </div>
 
   <div class="4u$ 12u$(mobile)">
