--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* Text */
+
+    small {
+        font-size: 80%;
+    }
+
+/* Buttons */
+
+    button {
+        font-size: large;
+    }
+
+    button:disabled {
+        opacity: 0.5;
+        cursor: not-allowed;
+    }
