--- a/src/app/create/create.component.html
+++ b/src/app/create/create.component.html
@@ -8,7 +8,7 @@
       </p>
     </div>
     <div class="4u$ 12u$(mobile)">
-      <button (click)="createRoomService.start()" [disabled]="!authService.authentificated()">Start new poll</button>
+      <button (click)="createRoomService.start()" [disabled]="!authService.authentificated()">Start new room</button>
     </div>
   </div>
 </section>
