question-creation component ok

--- a/src/app/create/create.component.html
+++ b/src/app/create/create.component.html
@@ -12,3 +12,11 @@
     </div>
   </div>
 </section>
+
+<!-- This section is for TEST -->
+<section>
+  <hr>
+  <p>{{diag()}}</p>
+  <hr>
+  <app-question-creation [question]="question" (actions)="actionsHandler($event)"></app-question-creation>
+</section>
