question-result component ok

--- a/src/app/create/create.component.html
+++ b/src/app/create/create.component.html
@@ -18,7 +18,9 @@
   <hr>
   <p>{{diag()}}</p>
   <hr>
-  <app-question-creation [question]="question" (onValidate)="validate($event)"></app-question-creation>
+  <app-question-result [question]="question"></app-question-result>
   <hr>
   <app-question-form [question]="question" (onChoice)="choice($event)"></app-question-form>
+  <hr>
+  <app-question-creation [question]="question" (onValidate)="validate($event)"></app-question-creation>
 </section>
