--- a/src/app/question-form/question-form.component.html
+++ b/src/app/question-form/question-form.component.html
@@ -4,7 +4,7 @@
     <p class="question-mark"><i class="fa fa-question"></i></p>
   </div>
   <div class="11u$ 12u$(mobile)">
-    <p>{{question.text}}</p>
+    {{question.text}}
   </div>
 
   <!-- options -->
