--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -15,7 +15,7 @@
 
   <div class="4u$ 12u$(mobile)">
     <a href="#" class="image fit">
-      <img src="http://placehold.it/500x700" alt="" />
+      <img src="assets/img/questions-components-preview.png" alt="Questions components preview" />
     </a>
   </div>
 </div>
