--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -14,7 +14,7 @@
   </div>
 
   <div class="4u$ 12u$(mobile)">
-    <a href="#" class="image fit">
+    <a href="assets/img/questions-components-preview.png" class="image fit">
       <img src="assets/img/questions-components-preview.png" alt="Questions components preview" />
     </a>
   </div>
