--- a/src/app/create/create.component.html
+++ b/src/app/create/create.component.html
@@ -16,23 +16,28 @@
 <!-- This section is for TEST -->
 <hr>
 <header>
-  <h2>Question components - Testing area</h2>
+  <h2>Question components - Interactive preview</h2>
+  <p>This section shows the components used to manipulate question. They will be used afterwards in this panel (create) and in the <a class="jumplink" href="#join">join</a> panel.</p>
+  <p>This three components works on the same question model, allowing you to test changes's effects.</p>
 </header>
 <section>
   <header>
     <h3>Creation</h3>
+    <p>This component is used to create question.</p>
   </header>
   <section>
     <app-question-creation [question]="question" (onValidate)="validate($event)"></app-question-creation>
   </section>
   <header>
     <h3>Form</h3>
+    <p>This component is used to answer to a question.</p>
   </header>
   <section>
     <app-question-form [question]="question" (onChoice)="choice($event)"></app-question-form>
   </section>
   <header>
     <h3>Result</h3>
+    <p>This component is used to show the question's answers statistics.</p>
   </header>
   <section>
     <app-question-result [question]="question"></app-question-result>
