--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -3,7 +3,7 @@
     <header>
       <h1>Poll's On!</h1>
       <p><strong>/pɔʊlzɒn/</strong></p>
-      <p>Simple, interactive, fast polls managment.</p>
+      <p>Simple, interactive, fast polls management.</p>
     </header>
 
     <p>Wanting to ask some questions to your audience ?<br>
