room-info component methods implemented

--- a/src/app/room-info/room-info.component.html
+++ b/src/app/room-info/room-info.component.html
@@ -11,8 +11,10 @@
   </ul>
 
   <!-- User questions infos -->
-  <h5>You</h5>
-  <ul>
-    <li>Not answered: {{notAnswered()}} / {{opened()}}</li>
-  </ul>
+  <div *ngIf="authService.authentificated()">
+    <h5>You</h5>
+    <ul>
+      <li>Not answered: {{notAnswered()}} / {{opened()}}</li>
+    </ul>
+  </div>
 </div>
