create panel almost ok

--- a/src/app/input-number/input-number.component.html
+++ b/src/app/input-number/input-number.component.html
@@ -1,1 +1,1 @@
-<input type="text" [size]="count" [placeholder]="placeholder" (keyup)="changed($event)">
+<input type="text" [size]="count" [placeholder]="placeholder" (keyup)="changed($event)" [disabled]="disabled">
