--- a/src/app/room-info/room-info.component.html
+++ b/src/app/room-info/room-info.component.html
@@ -1,6 +1,10 @@
 <div>
+  <!-- Number -->
+  <p>#{{room.id}}</p>
+
+  <!-- Title -->
   <h3>{{room.name}}</h3>
-  <small>by {{room.creator}}</small>
+  <small>by {{room.creator.email}}</small>
   
   <!-- General questions infos -->
   <h5>Questions</h5>
