--- a/src/app/create/create.component.html
+++ b/src/app/create/create.component.html
@@ -1,5 +1,5 @@
 <!-- This section is about starting the creation of a poll -->
-<section *ngIf="!createRoomService.creation()">
+<section *ngIf="!creation()">
   <div class="row">
     <div class="8u 12u$(mobile)">
       <p>
@@ -8,38 +8,71 @@
       </p>
     </div>
     <div class="4u$ 12u$(mobile)">
-      <button (click)="createRoomService.start()" [disabled]="!authService.authentificated()">Start new room</button>
+      <button (click)="create()" [disabled]="!authService.authentificated()">Start new room</button>
     </div>
   </div>
 </section>
 
-<!-- This section is for TEST -->
-<hr>
-<header>
-  <h2>Question components - Interactive preview</h2>
-  <p>This section shows the components used to manipulate question. They will be used afterwards in this panel (create) and in the <a class="jumplink" href="#join">join</a> panel.</p>
-  <p>This three components works on the same question model, allowing you to test changes's effects.</p>
-</header>
-<section>
-  <header>
-    <h3>Creation</h3>
-    <p>This component is used to create question.</p>
-  </header>
+<div *ngIf="creation()">
+  <!-- Room parameters -->
   <section>
-    <app-question-creation [question]="question" (onValidate)="validate($event)"></app-question-creation>
+    <h2>Room informations</h2>
+    <div class="row">
+      <!-- Name --> 
+      <div class="2u 12u$(mobile)">Name :</div>
+      <div class="8u 12u$(mobile)">
+        <input type="text" [(ngModel)]="roomName">
+      </div>
+      <div class="2u$ 12u$(mobile)">
+        <button (click)="updateName()">Update</button>
+      </div>
+      
+      <!-- Password --> 
+      <div class="2u 12u$(mobile)">Password :</div>
+      <div class="4u 12u$(mobile)">
+        <app-input-number count="4" (onFullfilled)="setRoomPassword($event)" [disabled]="hasPassword()"></app-input-number>
+      </div>
+      
+      <!-- Actions --> 
+      <div class="2u 12u$(mobile)">Actions :</div>
+      <div class="4u$ 12u$(mobile)">
+        <button (click)="close()">Close room</button>
+      </div>
+
+      <!-- Infos -->
+      <div class="12u$">
+        <p>Give the room number ({{roomProxyService.room.id}})<span *ngIf="hasPassword()"> and the room password ({{roomProxyService.room.password}})</span> to your audience to allow them to join it!</p>
+      </div>
+    </div>
   </section>
-  <header>
-    <h3>Form</h3>
-    <p>This component is used to answer to a question.</p>
-  </header>
+
+  <!-- Questions -->
   <section>
-    <app-question-form [question]="question" (onChoice)="choice($event)"></app-question-form>
+    <hr>
+    <p *ngIf="roomProxyService.room.questions.length==0">No questions yet</p>
+    <div *ngFor="let q of roomProxyService.room.questions">
+      <app-question-result [question]="q"></app-question-result>
+      <div class="row">
+        <div class="6u 12u$(mobile)">
+          <button (click)="deleteQuestion(q)">Delete question</button>
+        </div>
+        <div class="6u$ 12u$(mobile)">
+          Opened? 
+          <i *ngIf="q.open" class="fa fa-check"></i>
+          <i *ngIf="!q.open" class="fa fa-times"></i>
+          <button (click)="toggleQuestion(q)">Toggle</button>
+        </div>
+      </div>
+    </div>
   </section>
-  <header>
-    <h3>Result</h3>
-    <p>This component is used to show the question's answers statistics.</p>
-  </header>
+
+  <!-- Question editing -->
   <section>
-    <app-question-result [question]="question"></app-question-result>
+    <hr>
+    <button *ngIf="question==null" (click)="addQuestion()">Add question</button>
+    <div *ngIf="question!=null">
+      <p><button (click)="cancelQuestion()">Cancel question</button></p>
+      <app-question-creation [question]="question" (onValidate)="validateQuestion($event)"></app-question-creation>
+    </div>
   </section>
-</section>
+</div>
