--- a/src/app/question-result/question-result.component.html
+++ b/src/app/question-result/question-result.component.html
@@ -3,34 +3,44 @@
   <div class="1u 12u$(mobile)">
     <p class="question-mark"><i class="fa fa-question"></i></p>
   </div>
-  <div class="11u$ 12u$(mobile)">
+  <div class="9u 12u$(mobile)">
     {{question.text}}
   </div>
+  <div class="2u$ 12u$(mobile)">
+    <button *ngIf="!detail" (click)="toggleDetail()">More</button>
+    <button *ngIf="detail" (click)="toggleDetail()">Hide</button>
+  </div>
 
-  <!-- options -->
-  <div class="12u$" *ngFor="let option of question.options; let i = index">
+  <div class="12u$" *ngIf="detail">
     <div class="row">
-      <div class="1u 12u$(mobile)">
-        <p class="option-mark" *ngIf="noAnswer()"><i class="fa fa-angle-right"></i></p>
-        <p class="option-mark" *ngIf="!noAnswer()&&option.answer"><i class="fa fa-check"></i></p>
-        <p class="option-mark" *ngIf="!noAnswer()&&!option.answer"><i class="fa fa-times"></i></p>
-      </div>
-      <div class="7u 12u$(mobile)">
-        <span *ngIf="hasAnswered(option)" class="highlight">{{option.text}}</span>
-        <span *ngIf="!hasAnswered(option)">{{option.text}}</span>
-      </div>
-      <div class="4u$ 12u$(mobile)">
-        <div class="progress-container">
-          <div class="progressbar" [style.width]="percentage(i)">
-            <div><strong>{{percentage(i)}}</strong></div>
+
+      <!-- options -->
+      <div class="12u$" *ngFor="let option of question.options; let i = index">
+        <div class="row">
+          <div class="1u 12u$(mobile)">
+            <p class="option-mark" *ngIf="noAnswer()"><i class="fa fa-angle-right"></i></p>
+            <p class="option-mark" *ngIf="!noAnswer()&&option.answer"><i class="fa fa-check"></i></p>
+            <p class="option-mark" *ngIf="!noAnswer()&&!option.answer"><i class="fa fa-times"></i></p>
+          </div>
+          <div class="7u 12u$(mobile)">
+            <span *ngIf="hasAnswered(option)" class="highlight">{{option.text}}</span>
+            <span *ngIf="!hasAnswered(option)">{{option.text}}</span>
+          </div>
+          <div class="4u$ 12u$(mobile)">
+            <div class="progress-container">
+              <div class="progressbar" [style.width]="percentage(i)">
+                <div><strong>{{percentage(i)}}</strong></div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </div>
 
-  <!-- total -->
-  <div class="12u$ right">
-    <p>{{total()}} vote{{total()>0?'s':''}}</p>
+      <!-- total -->
+      <div class="12u$ right">
+        <p>{{total()}} vote{{total()>0?'s':''}}</p>
+      </div>
+
+    </div>
   </div>
 </div>
