add features list in about panel

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -19,3 +19,17 @@
     </a>
   </div>
 </div>
+
+<!-- Features list -->
+<hr>
+<div>
+  <h2>Features</h2>
+  <p></p>
+  <ul class="features-list">
+    <li><i class="fa fa-check"></i> Easy question creation, with all necessary operations.</li>
+    <li><i class="fa fa-check"></i> Choose which answer is the correct one, if you want to of course.</li>
+    <li><i class="fa fa-check"></i> Add password to your rooms for more control and security.</li>
+    <li><i class="fa fa-check"></i> Get back to your old rooms with amazing statistics.</li>
+    <li><i class="fa fa-check"></i> ... and more to discover !</li>
+  </ul>
+</div>
